# BioSync

./: .replit  README.md  app.py  models.py  pyproject.toml
attached_assets/: Pasted--biometric-data-data-image-jpeg-base64-9j-4AAQSkZJRgABAQAAAQABAAD-4gHYSUNDX1BST0ZJTEUAAQEAAAHIAA-1745364723284.txt
presentations/: README.md  biometric_auth_presentation.html  biometric_auth_presentation.md
routes/: auth.py  biometrics.py  info.py  profile.py  vehicle.py
static/css/: audi-logo.css  style.css
static/images/: audi-logo-base64.txt  audi-logo-embed.html
static/js/: biometric-animation.js  biometrics.js  face.js  micro-animations.js  proximity.js  retina.js  voice.js  welcome-animation.js
templates/: dashboard.html  face_capture.html  index.html  layout.html  login.html  mfa_settings.html  mfa_verify.html  partial_biometrics.html  profile.html  proximity_setup.html  register.html  retina_capture.html  technology.html  validate_biometrics.html  validate_face.html  validate_retina.html  validate_voice.html  validate_voice_new.html  vehicle_details.html  vehicle_register.html  vehicles.html  voice_capture.html
utils/: biometric_processing.py  biometric_validator.py  security.py
