[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "cryptography>=44.0.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "flask-wtf>=1.2.2",
    "anthropic>=0.49.0",
    "openai>=1.75.0",
    "scikit-learn>=1.6.1",
    "librosa>=0.11.0",
    "tensorflow>=2.14.0",
]
